--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,12 +1,6 @@
 @import 'variables';
-
-@import '~bootstrap/scss/bootstrap';
-@import '~sweetalert2/dist/sweetalert2';
-@import '~@fortawesome/fontawesome-svg-core/styles';
-
-@import 'elements/card';
-@import 'elements/navbar';
-@import 'elements/buttons';
+@import 'buefy';
+@import '~sweetalert2/src/sweetalert2';
 @import 'elements/transitions';
-
+@import 'elements/navbar';
 @import 'components/server-error';
