--- a/resources/sass/elements/_navbar.scss
+++ b/resources/sass/elements/_navbar.scss
@@ -3,17 +3,35 @@
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
 }
 
-.nav-item {
-  .dropdown-menu {
+.navbar-item {
+  .navbar-dropdown {
     border: none;
-    margin-top: .5rem;
     border-top: 1px solid #f2f2f2 !important;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.12), 0 2px 4px 0 rgba(0,0,0,0.08);
   }
 }
 
-.nav-link {
-  .svg-inline--fa {
-    font-size: 1.4rem;
+.hero.is-primary {
+  .navbar-item.has-dropdown.is-active {
+    .navbar-link {
+      color: $primary !important;
+
+      &:hover {
+        background-color: $primary-invert;
+      }
+    }
+    .navbar-item {
+      color: $primary !important;
+
+      &:hover {
+        color: $primary-invert !important;
+      }
+    }
+  }
+}
+
+.dropdown-item {
+  .icon.is-small {
+    height: 1.5rem;
   }
 }
